tests/ui/bad_array1.stderr
error: expected an array, but found `{ }`
 --> $DIR/bad_array1.rs:6:12
  |
6 |     many = {}
  |            ^^
